feat: optimize analytics data retrieval for incomplete work orders